--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,13 +47,13 @@ body {
 .monthly-event {
   background: radial-gradient(
       138.71% 110.11% at 93.15% -36.58%,
-      #4255f911 25%,
-      rgba(25, 26, 30, 0.13) 100%
+      #4255f922 25%,
+      #0F1319 100%
     ),
     radial-gradient(
       61.66% 37.6% at 6.63% 95.08%,
-      #4255f911 25%,
-      rgba(25, 26, 30, 0.13) 100%
+      #4255f922 25%,
+      #0F1319 100%
     ),
     rgba(26, 26, 26, 0.43);
   box-shadow: 0px 0.5px 16px 0px rgba(200, 200, 255, 0.1);
