--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,8 @@ body {
   box-shadow: 0px 0.5px 16px 0px rgba(200, 200, 255, 0.1);
   border: 1px solid #4255f911;
 }
+
+
+.footer-clip-path {
+  clip-path: polygon(15% 34%, 100% 0%, 100% 100%, 0% 100%);
+}
