feat: implemented events views

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,7 @@ textarea {
 }
 
 body {
-  /* font-family: "Space Grotesk", serif !important; */
-  font-family: "Space Mono", serif;
+  font-family: "Space Grotesk", serif !important;
   background-color: #ffffff;
   overflow-x: hidden;
 }
